[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "reconchain"
version = "3.1.0"
description = "A stdlib Python orchestrator for chained reconnaissance tooling."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "ReconChain contributors" }]
keywords = ["reconnaissance", "security", "bug-bounty", "automation"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Security",
]
dependencies = []

[project.optional-dependencies]
progress = [
  "tqdm>=4.66",
]
ai = [
  "openai>=1.0",
  "anthropic>=0.30",
]
bot = [
  "aiohttp>=3.9",
]
all = [
  "tqdm>=4.66",
  "openai>=1.0",
  "anthropic>=0.30",
  "aiohttp>=3.9",
]
dev = [
  "pytest>=8",
  "pytest-cov>=5.0",
  "ruff>=0.5",
  "mypy>=1.10",
  "tqdm>=4.66",
]

[project.scripts]
reconchain = "reconchain:main"

[tool.setuptools]
packages = ["reconchain", "reconchain.phases", "reconchain.phases.recon", "reconchain.cli"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "--tb=short -q"

[tool.coverage.run]
source = ["reconchain"]
branch = true
omit = [
    "reconchain/bot.py",
    "reconchain/dashboard_server.py",
    "reconchain/distributed.py",
    "tests/*",
]

[tool.coverage.report]
show_missing = true
fail_under = 5
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "raise NotImplementedError",
    "pass",
    "except ImportError",
    "except Exception:",
]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501", "F403", "F405"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
ignore_missing_imports = true
exclude = ["tests/", "phases/"]

